--- a/JavaScript/dom/index.html
+++ b/JavaScript/dom/index.html
@@ -4,11 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hospital Home Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <h1>Hospital Name</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="home" class="hero-section">
+        <div class="hero-content">
+            <h2>Welcome to Our Hospital</h2>
+            <p>Your Health, Our Priority</p>
+            <button id="learnMoreBtn">Learn More</button>
+        </div>
+    </section>
+
+    <section id="services" class="services-section">
+        <h2>Our Services</h2>
+        <div class="service-container">
+            <div class="service-card">
+                <h3>General Care</h3>
+                <p>We provide high-quality medical care for everyone.</p>
+            </div>
+            <div class="service-card">
+                <h3>Emergency</h3>
+                <p>24/7 Emergency services to ensure timely treatment.</p>
+            </div>
+            <div class="service-card">
+                <h3>Specialty Clinics</h3>
+                <p>Experienced doctors for specialized treatments.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about-section">
+        <h2>About Us</h2>
+        <p>Our hospital is dedicated to providing the best healthcare services. We have a team of expert doctors,
+            nurses, and medical staff who are committed to your well-being.</p>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <h2>Contact Us</h2>
+        <form id="contactForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Hospital Name. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
