--- a/JavaScript/dom/index.html
+++ b/JavaScript/dom/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-</head> 
+</head>
+
 <body>
-    <button onclick="console.log('Hello!  '); alert('Hello!  ')">Click me</button>
+    <button id="mode">Change Mode</button>
+    <div>This is a box</div>
     <script src="script.js"></script>
 </body>
+
 </html>
